@@ -116,7 +116,7 @@ struct torrent_entry
 
 struct dht_immutable_item
 {
-	dht_immutable_item() : value(0), num_announcers(0) {}
+	dht_immutable_item() : value(0), num_announcers(0), size(0) {}
 	// malloced space for the actual value
 	char* value;
 	// this counts the number of IPs we have seen
